Created the information section & given CSS styling for the same

--- a/index.html
+++ b/index.html
@@ -24,7 +24,33 @@
         <img src="https://media.istockphoto.com/id/1200624267/vector/business-people-run-to-the-target-by-a-helping-hand.jpg?s=2048x2048&w=is&k=20&c=Cvx5xNPlaWQL1-aVIpRz2YmG5sB-wke952f35TLWiAU=" alt="Hero Image" height="200" width="800">
     </div>
     <div class="sectiontwo">
-
+        <p class="infoheader">Some random information</p>
+        <div class="infosect">
+            <div class="info">
+                <div class="img">
+                    <img src="https://cdn.pixabay.com/photo/2023/06/08/14/52/podcast-8049740_640.png" alt="Information" height="150" width="150">
+                    <p>this some subtext under an illustration or image</p>
+                </div>
+            </div>
+            <div class="info">
+                <div class="img">
+                    <img src="https://cdn.pixabay.com/photo/2023/06/08/14/52/podcast-8049740_640.png" alt="Information" height="150" width="150">
+                    <p>this some subtext under an illustration or image</p>
+                </div>
+            </div>
+            <div class="info">
+                <div class="img">
+                    <img src="https://cdn.pixabay.com/photo/2023/06/08/14/52/podcast-8049740_640.png" alt="Information" height="150" width="150">
+                    <p>this some subtext under an illustration or image</p>
+                </div>
+            </div>
+            <div class="info">
+                <div class="img">
+                    <img src="https://cdn.pixabay.com/photo/2023/06/08/14/52/podcast-8049740_640.png" alt="Information" height="150" width="150">
+                    <p>this some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="sectionthree">
 
