--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
         </div>
     </div>
     <div class="sectionthree">
-
+        <p class="quote">
+            This is an inspiring quote or a testimonial from a customer. MAybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </p>
+        <p class="person">
+            -Thor, God of Thunder
+        </p>
     </div>
     <footer>
         Copyright &#169; The Odin Project 2021
