--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
             -Thor, God of Thunder
         </p>
     </div>
+    <div class="sectionfour">
+        <div class="call2action">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
+
+    </div>
     <footer>
         Copyright &#169; The Odin Project 2021
     </footer>
